# GovMediaSummary

./: .env  .gitignore  eda.ipynb  main.py  pyproject.toml  report_prompt_template.txt
chroma_news_db/: chroma.sqlite3
old_code/: PlanGenerator_Ollama.py  PostgresDatabase.py  ReportGenerator.py  SQLGenerator.py  SummaryGenerator.py
tools/: ChromaDBHandler.py  DocumentGenerator.py  MediaAgent.py  NewsCrawler.py  PlanGenerator.py  PostgresDatabase.py  ReportGenerator.py  SQLGenerator.py  webCrawler.py
