[project]
name = "govmediasummary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "crawl4ai>=0.8.0",
    "devtools>=0.12.2",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "rank-bm25>=0.2.2",
]
